# ges-feasibility-engine

./: .gitignore  AGENTS.md  DECISIONS.md  GOAL_G10.md  GOAL_G11.md  GOAL_PROMPTS_G4_G9.md  GOAL_UI_IMPROVEMENT.md  PROGRESS.md  PROJECT_BRIEF.md  README.md  REGULATION_NOTES.md  VALIDATION.md  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
config/regulation/: ground_mount.yaml  rooftop.yaml
config/tariffs/: 2026.yaml  2026_try.yaml  battery_2026.yaml
scratch/: generate_g9_golden.py  regen_goldens_g10.py
src/gesfeas/: __init__.py
src/gesfeas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gesfeas/finance/: __init__.py  battery.py  engine.py  models.py  pysam_rollup.py
src/gesfeas/input/: __init__.py  errors.py  models.py  parser.py
src/gesfeas/production/: __init__.py  engine.py  models.py  pvgis.py
src/gesfeas/regulation/: __init__.py  engine.py  models.py
src/gesfeas/report/: __init__.py  generator.py
src/gesfeas/report/templates/: feasibility_report.html
src/gesfeas/scenario/: __init__.py  engine.py  models.py
tests/: test_battery_finance.py  test_finance.py  test_input.py  test_integration.py  test_production.py  test_regression.py  test_regulation.py  test_report.py  test_sanity.py  test_scenario.py  test_tou_tariff.py  test_ui_pipeline.py
tests/fixtures/: consumption_valid.csv  pvgis_tmy_ankara.csv  pvgis_tmy_ankara_meta.json
tests/golden/: g3_reference.json  g4_reference.json  g7_sample_report.html  g9_full_pipeline.json
