[project]
name = "gesfeas"
version = "0.1.0"
description = "GES Fizibilite Engine"
requires-python = ">=3.11"
dependencies = [
    "pvlib",
    "nrel-pysam",
    "pandas",
    "pydantic",
    "pyyaml",
    "requests",
    "pytest",
    "jinja2>=3.1.6",
    "weasyprint>=69.0",
    "streamlit>=1.58.0",
]
